cmake_minimum_required(VERSION 3.15)
project(coding)

set(CMAKE_CXX_STANDARD 17)

#add_executable(coding main.cpp)
add_executable(pointer src/basics/pointers.cpp)
add_executable(refs src/basics/references.cpp)
add_executable(cons src/basics/consts.cpp)
add_executable(autos src/basics/autos.cpp)
add_executable(range src/basics/rangefor.cpp)
add_executable(func src/basics/Functions.cpp)
add_executable(oldc src/dynamicMem/oldway.c)
add_executable(old src/dynamicMem/oldcppway.cpp)
add_executable(arr src/dynamicMem/arrays.cpp)
add_executable(basicint src/oops/Integer.cpp src/oops/Integer.h src/oops/IntegerDriver.cpp)
add_executable(advint src/oops/Intadvdrive.cpp src/oops/Integer.cpp)